# raspberry-discord-with-rust

./: .env.example  Cargo.toml  README.md
deploy/: discord-bot.service
src/: main.rs
src/commands/: music.rs  ping.rs
src/commands/music/: mod.rs  mp3.rs  play.rs  shared.rs  video.rs  voice.rs
src/events/: ready.rs
